<?xml version="1.0" encoding="utf-8"?>

<!--
Taken reference from https://github.com/yomiyusuf/InstaLogin/
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">


    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        app:layout_constraintGuide_begin="32dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        app:layout_constraintGuide_end="32dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/walkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_directions_walk_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_background"
        android:hint="@string/enter_your_phone_number"
        android:inputType="text|phone"
        android:padding="16dp"
        android:textColorHint="@color/colorGrey"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/walkIcon" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:drawableEnd="@drawable/icon_eye"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColorHint="@color/colorGrey"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/button_skip_for_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_button"
        android:text="@string/skip_for_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/button_login" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_skip_for_now" />

    <View
        android:id="@+id/or_line_1"
        android:layout_width="115dp"
        android:layout_height="2dp"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/button_skip_for_now"
        app:layout_constraintBottom_toTopOf="@+id/create_account"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toStartOf="@+id/or_textview"/>

    <TextView
        android:id="@+id/or_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/or_line_1"
        app:layout_constraintTop_toTopOf="@+id/or_line_1"
        app:layout_constraintEnd_toStartOf="@+id/or_line_2"
        app:layout_constraintStart_toEndOf="@+id/or_line_1" />

    <View
        android:id="@+id/or_line_2"
        android:background="@color/colorWhite"
        android:layout_width="115dp"
        android:layout_height="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/or_textview"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/or_textview"
        app:layout_constraintTop_toTopOf="@+id/or_textview" />

</android.support.constraint.ConstraintLayout>